--- a/cabs.css
+++ b/cabs.css
@@ -13,7 +13,7 @@ nav{
     width: 100%;
     padding-block: 15px;
     display: flex;
-    background: #533E8D;
+    background:#f1f1f1;
     z-index: 99;
    & .icon_nav{
          display: flex;
@@ -122,13 +122,13 @@ nav{
       & .sec_left{ 
           & .sec_card{ 
             margin-inline : auto;
-            width: 40%;
+            width: 60%;
             height: 300px;
             font-size: 18px;
             font-weight: 300;
             margin: 30px; 
             padding: 20px;
-            margin-left: 850px;
+
             border-radius: 8px;
             background: linear-gradient(136deg, rgba(35, 172, 216, 0.06) 0%, #C7C7C7 63%, #7578C7 100%); box-shadow: -3px -3px 45px rgba(127, 140, 141, 0.51);
             box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.25), -2px -2px 4px 0 rgba(0, 0, 0, 0.25); 
@@ -184,20 +184,7 @@ nav{
           } 
       }
       
- .time2trawel {
-    width: 349px;
-    position: relative;
-    font-size: 30px;
-    letter-spacing: 0.06em;
-    line-height: 56px;
-    font-weight: 600;
-    color: #ff5c00;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-shadow: 1px 0 0 #ff5c00, 0 1px 0 #ff5c00, -1px 0 0 #ff5c00, 0 -1px 0 #ff5c00;
-  }
+  
   .my-button{
     margin:0auto;
     margin-top:29px;
@@ -222,41 +209,60 @@ nav{
     padding:30px;
    
   }
-      & .sec_right{
-          display: grid;
-          align-items: center;
-          grid-gap:10px 10px;
+  & .sec_right{
+    display: grid;
+    align-items: center;
+    grid-gap: 10px 10px;
+    
+    & .b1{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        justify-content: center;
+        & .s_b1{
+            width: 70%;
+            background-color: #ffffff;
+            background-image: url(img/banner.png);
+            border: 1px solid black;
+            background-size: contain;
+            background-repeat: no-repeat;
+            padding-block: 70px;
+            text-align: center;  
+            border-radius: 6px;
+            display: flex;
+           justify-content: center;
+           margin-inline: auto;
+           margin-top: 25px;
+        }
+    }
+
+    & .b2{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-column-gap: 10px;
+        & .s_b1{
+          background-image: url(img/cashback.jpg);
+          width: 60%;
+          border: 1px solid black;
+          background-size: contain;
+          background-repeat: no-repeat;
+          border-radius: 6px;
+          display: flex;
+          justify-content: center;
+          margin-inline: auto;
+          margin-top: 25px;
+          box-shadow:#8E8E8E ;
           
-          & .b1{
-              display: grid;
-              grid-template-columns: repeat(1,1fr);
-              justify-content: center;
-              & .s_b1{
-                  width: 50%;
-                  background-color: #8E8E8E;
-                  padding-block: 70px;
-                  text-align: center;  
-                  border-radius: 6px;
-                  display: flex;
-                 justify-content: center;
-                 margin-inline: auto;
-                 margin-top: 25px;
-              }
-          }
-          & .b2{
-              display: grid;
-              grid-template-columns: repeat(2,1fr);
-              grid-column-gap: 10px;
-              & .s_b1{
-                  background-color: #8E8E8E;
-                  padding-block: 75px;
-                  text-align: center;  
-                  border-radius: 6px;
-                  display: flex;
-                  justify-content: center;
-                  margin-inline-end: 10%
-              }
-          }
+        }
+        & .s_b1,.s_b2{
+            background-color: #ffffff;
+            padding-block: 75px;
+            text-align: center;  
+            border-radius: 6px;
+            display: flex;
+            justify-content: center;
+            margin-inline-end: 10%;
+        }
+    }
           & ._card_banners{
               display: grid;
               grid-template-columns: repeat(3,1fr);
@@ -358,7 +364,7 @@ nav{
         justify-content: center;
         & .sec_left{ 
           & .sec_card{ 
-            width: 95%;
+            width: 65%;
             margin-inline: auto;
           }
         }
@@ -380,9 +386,14 @@ nav{
                } 
           }
               }
-               
           }
         }
+        @media screen and (max-width:480px) {
+        .my-button{
+          margin-left: 30px;
+          margin-top: 50px;
+        }
+      }
 
 @media screen and (max-width:480px) {
     .banner_or_image{
@@ -391,58 +402,74 @@ nav{
         margin-block:17%;
     }
 }
-.banner_or_image{
-    width: 90%;
-    margin-inline:auto;
-    width: 80%;
-    height: 230px;
-    border-radius: 15px;
-    box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.25), -2px -2px 4px 0 rgba(0, 0, 0, 0.25); 
-    display:block;
-    justify-content: center;
-    align-items: center;
-    margin-block:2%;
+
+.whyBlock_section{ 
+  display: flex; 
+  width: 80%;
+  height: auto;
+  flex-direction: column;
+  margin-inline:auto;
+  margin-block:4%;
+  /* margin-left: 60px; */
+  margin-top: 80px;
+  border-radius: 17px;
+  padding: 23px;
+  overflow: hidden;
+  flex-wrap: wrap;
+  box-shadow: -2px -2px 15px rgba(127, 140, 141, 0.72),2px 2px 37px rgba(127, 140, 141, 0.72);
+  & b{
+      color: #000;  
+      font-family: Poppins;
+      font-size: 25px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 56px; 
+      letter-spacing: -0.76px;
+      background: linear-gradient(90deg, #ea2331, rgba(67, 38, 78, 0.5));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      display: inline-block;
+  }
+  & p{
+      color: #000;
+      font-family: Montserrat;
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 45px;  
+      letter-spacing: -0.66px;
+  }
 }
-.time2trawel-holidays {
-    padding-left: 25px;
-    padding-top: 10px;
-    margin-bottom: 10px;
-     position: relative;
-     font-size: 33px;
-     line-height: 56px;
-     font-weight: 400;
-     font-family: Montserrat;
-     background: linear-gradient(90deg, #ea2331, rgba(67, 38, 78, 0.5));
-     -webkit-background-clip: text;
-     -webkit-text-fill-color: transparent;
-     display: inline-block;
-   }
-   
-   
-   .time2trawel-is-one {
-     padding-left: 25px;
-     position: relative;
-     font-size: 20px;
-     
-     font-weight: 300;
-     color: #000;
-     white-space: pre-wrap;
-     display: flex;
-     line-height: 54px;
-   }
-   
+
+@media screen and (max-width:768px) {
+  .whyBlock_section{
+      width:90%;
+      margin-inline:auto; 
+  }
+}
+
+@media screen and (max-width:480px) {
+  .whyBlock_section{
+      width:65%;
+      margin-inline:auto;
+      margin-bottom: 30px;
+      padding-top: 5px;
+  }
+}
+
    .pickup, .dropup{
     text-align: center;
     background-color:#fff;
     border-radius: 10px;
     height: 30px;
    }
-.copyright{
-    width: 100%;
-    padding-bottom: 10px;
+
+
+  .copyright{
     background: black;
     color:white;
     padding-block: 10px;
     text-align: center;
-  }
-  
+}
+
+
