--- a/visa.css
+++ b/visa.css
@@ -10,30 +10,27 @@ nav{
   position: fixed;
 }
 nav{ 
-    width: 100%; 
+    width: 100%;
     padding-block: 15px;
     display: flex;
-    background:#f1f1f1;
-    border-bottom: 1px solid transparent;
-    box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2);
-    z-index:99;
+    background: #533E8D;
+    z-index: 99;
    & .icon_nav{
          display: flex;
          & .brand{
              display: flex;
              align-items: center;
              & img{
-                 padding-left:40px;
-                 margin-left: 10px;
+                 
+                 padding:6px;
+ 
              }
          }
          & ul{
              list-style-type: none;
              display: flex;
-             column-gap : 9%; 
-             padding-left: 25px;
+             column-gap :  10%; 
              font-size: 18px;
-             font-weight: bold;
              & li{
                  display: grid;
                  cursor: pointer !important;
@@ -60,25 +57,16 @@ nav{
      display: flex;
      justify-content: flex-end;
      width: 100%;
-     padding-inline-end: 25px;
+     padding-inline-end: 15px;
        & ul{
          list-style-type: none;
          display: flex;
          align-items: center;
+         
          gap : 18px;
+         
        }
     }
- }
- 
- .mat-181{
-  background-color: #FF5C00;
-  text-align: center;
-  border-radius: 14px;
-  width: 55px;
-  height: 22px;
- }
- .icon{
-    margin-left: 10px;
  }
  nav#mobile_nav{
      display: flex;
@@ -110,14 +98,3 @@ nav{
          display: none;
      }
  }
- 
-.copyright{
-    padding-bottom: 10px;
-    background: black;
-    color:white;
-    padding-block: 10px;
-    text-align: center;
-  }
-  
- 
-  
